plugin and jee example generation working