@@ -10,43 +10,6 @@
 
   <build>
     <plugins>
-      <!-- <plugin> -->
-      <!-- <groupId>org.fornax.toolsupport</groupId> -->
-      <!-- <artifactId>fornax-oaw-m2-plugin</artifactId> -->
-      <!-- <executions> -->
-      <!-- <execution> -->
-      <!-- <phase>generate-sources</phase> -->
-      <!-- <goals> -->
-      <!-- <goal>run-workflow</goal> -->
-      <!-- </goals> -->
-      <!-- <configuration> -->
-      <!-- <workflowEngine>mwe2</workflowEngine> -->
-      <!-- <workflowDescriptor>src/main/resources/XmdlabPuppetGenerator.mwe2</workflowDescriptor> -->
-      <!-- <timestampFileName>generator.timestamp</timestampFileName> -->
-      <!-- <checkFilesets> -->
-      <!-- <checkFileset> -->
-      <!-- <directory>${basedir}</directory> -->
-      <!-- <includes> -->
-      <!-- <include>src/main/resources/*.application</include> -->
-      <!-- <include>src/main/resources/*.conf</include> -->
-      <!-- </includes> -->
-      <!-- </checkFileset> -->
-      <!-- </checkFilesets> -->
-      <!-- <jvmSettings> -->
-      <!-- <fork>true</fork> -->
-      <!-- <jvmArgs> -->
-      <!-- <jvmArg>-Xms100m</jvmArg> -->
-      <!-- <jvmArg>-Xmx700m</jvmArg> -->
-      <!-- <jvmArg>-XX:MaxPermSize=128m</jvmArg> -->
-      <!-- required to read the xtext file with the correct encoding -->
-      <!-- <jvmArgs>-Dfile.encoding=UTF-8</jvmArgs> -->
-      <!-- </jvmArgs> -->
-      <!-- </jvmSettings> -->
-      <!-- </configuration> -->
-      <!-- </execution> -->
-      <!-- </executions> -->
-      <!-- </plugin> -->
-
       <plugin>
         <groupId>org.xmdlab</groupId>
         <artifactId>xmdlab-maven-plugin</artifactId>
@@ -73,12 +36,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.xmdlab.cartridges</groupId>
-      <artifactId>org.xmdlab.cartridge.jee</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-  </dependencies>
 </project>
